fix(SendTransaction): layout issue with signing form

--- a/src/components/SendTransaction/SendTransaction.scss
+++ b/src/components/SendTransaction/SendTransaction.scss
@@ -248,12 +248,6 @@ $titleBar-height: 90px;
                         display: flex;
                     }
 
-                    .text-input {
-                        margin: 6px;
-                        display: inline-block;
-                        width: 47%;
-                    }
-
                     button {
                         width: 45%;
                         margin: 2em 2.5% 0em;
